      - 'markAsAutomaticallyInstalled': renamed to
        'setAutomaticallyInstalledFlag'.
      - 'deleteArchive': fixed possible directory traversal.
    - config:
      - Option 'cupt::resolver::max-solution-count': increased default value
        from 256 to 512.
      - Specified the 'quiet' option as '0' to make apt-listchanges work (a
        work-around for #604130).
  * debian:
    - rules:
      - Fixed installing bash completion script.
  * doc:
    - reference:
      - Documented dynamic library parts. All library is documented now.
    - cupt-experimental.1:
      - '--installed-only' works under 'shell' subcommand since 2.0.0~alpha1.

 -- Eugene Lyubimkin <ext-lyubimkin.eugene@nokia.com>  Tue, 16 Nov 2010 10:09:36 +0200

cupt2 (2.0.0~alpha2) UNRELEASED; urgency=low

  * console:
    - 'why': fixed infinite CPU and RAM usage when some of starting versions
      have a dependency cycle with any other version.
  * lib:
    - hashsums:
      - 'getStringHash': speed-up.
      - 'getStringHash': renamed to 'getHashOfString'.
      - 'getHashOfString': fixed crash on non-ASCII strings.
      - Use libgcrypt for hash computations.
    - cache:
      - Pre-parsing index files: really discard packages with broken package
        names.
      - 'operator=': forbidden now.
    - file:
      - 'getBlock': renamed to 'getRecord'.
      - destructor: check child exit status in a pipe mode.
    - common:
      - 'exception': renamed to 'Exception'.
    - system/resolvers/native:
      - Don't add new reason to an action which received unsatisfied soft
        dependency penalty.
    - config:
      - 'getNumber': renamed to 'getInteger'.
    - cache/version:
      - 'AvailableAsEntry': renamed to 'Source'.
      - 'availableAs': renamed to 'sources'.
    - download/progress:
      - 'progress': fixed nasty bug with wrong computing total download
        size when at least one download has an unknown size.